2004-08-XX
----------
1.1.5 released. dos (djgpp), win32 (mingw) and linux (gcc) binaries.
+ new faster sequence matching algorithm that also handles long rle-sequences
  without slowing down like the old one did.
+ bugfix: use -lauto mechanism for built in decrunchers too in order to handle
  files that requires large safety margins. Previously, files that contained
  previously crunched data could fail for this reason. Thanks to Csabo / LOD
  for reporting this one.
+ bugfix: Now -ssys works when using the c64-noeffect and 16/+4-effect
  decruncher too.
+ bugfix: Now the c16/plus4 version of the trampoline generated by exobasic
  works as expected. Thanks to Csabo / LOD for reporting this bug.
+ improvment: Now the exobasic tool can regenerate the system color table
  in its c16/plus4 trampoline.
+ updates to the exomizer-1.1.5.txt file.
+ updates to the exobasic-1.0b2.txt file.

2004-06-02
----------
1.1.4p1 released. dos (djgpp), win32 (mingw) and linux (gcc) binaries.
+ bugfix The only change compared to 1.1.4 is a bugfixed exodecrunch.s.
  (now one byte longer) The binaries are the same as 1.1.4.

2004-05-29
----------
1.1.4 released. dos (djgpp), win32 (mingw) and linux (gcc) binaries.
+ added a section in the documentation about a fix for c16/+4 color corruption
  after decrunch.
+ changed the noeffect decruncher for c16/+4 to allow decruncing of data
  occupying $0400-b$fcff.
+ added a contrib directory for distribution of contributed related material.
  First out is Ninja/The Dreams with the source code to a very size-optimized
  c64 decruncher for 4k-demos or similar usage where every byte counts. Please
  see the "exo-4k.asm" file for information about how to use it.
+ normal decruncher source (exodecrunch.s) is now shorter and faster. Thanks to
  Ninja/The Dreams for suggesting some of the changes.
+ the flag -l now also accepts the string auto as an argument. Giving this
  string results in that the cruncher will use the address of the infile with