@@ -1,6 +1,6 @@
 ----------------------------------------------------------------------------
 
-Exomizer 1.1.4
+Exomizer 1.1.5
 --------------
 
 What is it?
